# docx-equation

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: generate_pydoc.py  index.md  tutorial.md
docs/api/: docx_equation.api.html  docx_equation.cli.html  docx_equation.document.html  docx_equation.html  docx_equation.mathtype.cfb.html  docx_equation.mathtype.embed.html  docx_equation.mathtype.html  docx_equation.mathtype.legacy.html  docx_equation.mathtype.mtef.html  docx_equation.mathtype.ole.html  docx_equation.mathtype.ooxml.html  docx_equation.mathtype.preview.html  docx_equation.omml.converter.html  docx_equation.omml.embed.html  docx_equation.omml.html  docx_equation.shared.html  docx_equation.shared.latex.html  docx_equation.shared.mathml.html  docx_equation.shared.models.html  docx_equation.shared.numbering.html  docx_equation.shared.ooxml.html  index.html
src/docx_equation/: __init__.py  api.py  cli.py  document.py
src/docx_equation/mathtype/: __init__.py  cfb.py  embed.py  legacy.py  ole.py  ooxml.py
src/docx_equation/omml/: __init__.py  converter.py  embed.py
src/docx_equation/shared/: __init__.py  latex.py  mathml.py  models.py  numbering.py  ooxml.py
src/mt_toolkit/: __init__.py  cli.py  convert_docx.py  docx_embed.py  latex.py  mathml.py  mtef.py  ole.py  preview.py
src/mt_toolkit/application/: __init__.py  conversion.py
src/mt_toolkit/domain/: __init__.py  models.py
src/mt_toolkit/infrastructure/: __init__.py
src/mt_toolkit/infrastructure/ooxml/: __init__.py  embed_mathml.py  mathml_to_omml.py
src/mt_toolkit/interfaces/: __init__.py  cli.py
tests/: test_core.py
