[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docx-equation"
version = "0.3.0"
description = "Tools for generating MathType-compatible equation objects and DOCX equation layouts from MathML."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "npofsi" }]
keywords = ["mathtype", "mtef", "ole", "docx", "mathml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
dependencies = [
    "lxml>=5.0",
    "Pillow>=10.0",
    "python-docx>=1.0",
    "olefile>=0.47",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "twine>=5.0",
]

[project.scripts]
docx-equation = "docx_equation.cli:main"

[project.urls]
Homepage = "https://github.com/npofsi/docx-equation"
Repository = "https://github.com/npofsi/docx-equation"
Issues = "https://github.com/npofsi/docx-equation/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
